# substreams-near

./: .gitignore  .sfreleaser  CHANGELOG.md  Cargo.toml  README.md  gen.sh
core/: Cargo.toml
core/src/: block_view.rs
core/src/pb/: mod.rs
substreams-near/: Cargo.toml
substreams-near/src/: lib.rs
