[workspace]
members = [
    "core",
    "substreams-near",
]

[workspace.package]
version = "0.9.2"
edition = "2021"
description = "Substreams development kit for near chains, contains Firehose Block model and helpers as well as utilities for near ABI encoding/decoding."
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-near/tree/develop/substreams-near"
license = "Apache-2.0"
readme = "README.md"
keywords = [ "substreams", "near", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[workspace.dependencies]
substreams-near = { version = "0.1.0", path = "./substreams-near" }
substreams-near-core = { version = "0.1.0", path = "./core" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"