[package]
name = "substreams-near-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prost = { version = "0.11" }
prost-types = "0.11"
bs58 = "0.4.0"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
anyhow = "1"
