[package]
name = "substreams-near-core"
version = "0.9.4"
edition = "2021"
description = "Substreams development kit for near chains, contains Firehose Block model and helpers."
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-near/tree/develop/substreams-near"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "near", "streamingfast", "firehose", "thegraph"]
categories = ["wasm"]
rust-version = "1.60"

[dependencies]
prost = { version = "0.11" }
prost-types = "0.11"
bs58 = "0.4.0"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
anyhow = "1"
