[package]
name = "substreams-near-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true


[dependencies]
prost = { version = "0.13" }
prost-types = "0.13"
bs58 = "0.4.0"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
anyhow = "1"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }