[package]
name = "substreams-near"
version = "0.9.4"
edition = "2021"
description = "Substreams development kit for near chains, contains Firehose Block model and helpers as well as utilities for near ABI encoding/decoding."
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-near/tree/develop/substreams-near"
license = "Apache-2.0"
readme = "../README.md"
keywords = [ "substreams", "near", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[dependencies]
substreams = "^0.5.0"
substreams-near-core = { version = "0.9.4", path = "../core" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
