[package]
name = "substreams-near"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
substreams = "^0.6.0"
substreams-near-core = { version = "0.10.0", path = "../core" }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
anyhow = "1"